# DeltaVM

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  launch.json  test.c
.use_later/: Delta-Thr.h  hash.c  rot.h
include/: Delta-Debug.h  Delta-ExtAPI.h  Delta-Op.h  Delta-Regs.h  DeltaVM-Core.h  DeltaVM.h  delta_script.h  delta_script_opcodes.h
src/: Struct.h  TValue.c  Tvalue-alloc.c  heatbeat.c  vm-base.c  vm_panic.c
src/asm/: regs_api.s
src/executing/: core-api.c  debug.c  exec.c  fetch.h  fns.h  sym.c  sym.h  user-api.c
src/executing/loader/: check.c  load.c
src/include/: TValue.h  allocator.h  canary.h  dict.h  structs.h
src/libs/: allocator.c  dict.c  murmur.c  strdup.c
src/opcodes/au/: add.c  div.c  mul.c  sub.c
src/opcodes/base/: getreg.c  setreg.c
src/opcodes/bits/: and.c  not.c  or.c  xor.c
src/opcodes/copy/: copy.c
src/opcodes/jmp/: call.c  eif.c  jif.c  jifn.c  jmp.c  ret.c
src/opcodes/share/: alc.c  ende.c  mov.c  prt.c
src/opcodes/stack/: pop.c  push.c
src/opcodes/stub/: panic.c
tools/: checker.py  launch.json
